# cudaLATCH

./: CMakeLists.txt  Makefile  README.md  affTest.cpp  bitMatcher.cu  bitMatcher.h  driveGnuPlotStreams.pl  gpuFacade.cpp  gpuFacade.hpp  latch.cu  latch.h  latchAff.cu  latchAff.h  min.cpp  vo.cpp  vo2.cpp
